--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" type="text/css" href="encriptador.css" />
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
   <div id="Logo">
