--- a/index.html
+++ b/index.html
@@ -4,23 +4,28 @@
   <link rel="icon" href="Imagenes/Logo.png" type="image/x-icon" />
   <link rel="stylesheet" type="text/css" href="encriptador.css" />
   <script defer src="js/logica.js"></script>
-  <meta charset="utf-8">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta charset="utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
   <div id="Logo">
-    <h1><img id="imgLogo" src="Imagenes/Logo.png"/></h1>
+    <h1><img id="imgLogo" src="Imagenes/Logo.png" /></h1>
   </div>
-  <div id="inputText">
-    <textarea id="inputText2" placeholder="Ingrese el texto aqui"></textarea>
-  </div>
-  <div id="outPutText">
-    <textarea id="outPutText2" placeholder="No se ha encontrado ningun texto"></textarea>
+  <div id="inputs">
+    <div id="inputText">
+      <textarea id="inputText2" placeholder="Ingrese el texto aqui"></textarea>
+    </div>
+    <div id="outPutText">
+      <textarea
+        id="outPutText2"
+        placeholder="No se ha encontrado ningun texto"
+      ></textarea>
+    </div>
   </div>
   <div id="botones">
     <h3 id="alert">
-      <img id="alertImg" src="Imagenes/alerta.png" /> Solo ingresar letras minusculas y
-      sin acentos
+      <img id="alertImg" src="Imagenes/alerta.png" /> Solo ingresar letras
+      minusculas y sin acentos
     </h3>
     <button id="encriptar">Encriptar</button>
     <button id="desencriptar">Desencriptar</button>
