--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
     </div>
   </div>
   <div id="botones">
-    <h3 id="alert">
-      <img id="alertImg" src="Imagenes/alerta.png" /> Solo ingresar letras
-      minusculas y sin acentos
-    </h3>
-    <button id="encriptar">Encriptar</button>
-    <button id="desencriptar">Desencriptar</button>
-  </div>
-  <div id="btnCopiar">
-    <button id="copiar">Copiar</button>
+    <div id="btns">
+      <h3 id="alert">
+        <img id="alertImg" src="Imagenes/alerta.png" /> Solo ingresar letras
+        minusculas y sin acentos
+      </h3>
+      <button id="encriptar">Encriptar</button>
+      <button id="desencriptar">Desencriptar</button>
+    </div>
+    <div id="btnCopiar">
+      <button id="copiar">Copiar</button>
+    </div>
   </div>
 </body>
